fix(ui5-tree): alignment of items

--- a/packages/main/src/themes/TreeListItem.css
+++ b/packages/main/src/themes/TreeListItem.css
@@ -76,6 +76,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-shrink: 1;
 }
 
 .ui5-li-tree-toggle-icon {
